# vdi-stream-client

./: .clang-format  .clang-tidy  .travis.yml  COPYING.EXCEPTION  Makefile.am  README.md  autogen.sh  configure.ac
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy.yml
.travis/: 01-shared-linking.sh  02-dso-linking.sh
docs/man1/: Makefile.am  vdi-stream-client.1
include/: font.h
scripts/: check  check-comment-spacing  check-function-spacing
src/: Makefile.am  audio.c  audio.h  client.c  client.h  engine-parsec.c  engine-parsec.h  ffmpeg.c  ffmpeg.h  input.c  input.h  parsec.c  parsec.h  parsec_ffmpeg.c  parsec_ffmpeg.h  placebo.c  placebo.h  redirect.c  redirect.h  usb-redirect.c  usb-redirect.h  vdi-stream-client.c  vdi-stream-client.h  video.c  video.h
tools/: parsec-login
